--- a/src/app/dash-board/sidebar/sidebar.component.html
+++ b/src/app/dash-board/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
         </mat-expansion-panel-header>
 
         <mat-nav-list>
-          <a mat-list-item routerLink="/main/crud/vessel">Elecciones</a>
+          <a mat-list-item routerLink="/dash/abm/elecciones">Elecciones</a>
           <a mat-list-item routerLink="/main/crud/launch">Compañeros</a>
           <a mat-list-item routerLink="/main/crud/vessel">Escuelas</a>
           <a mat-list-item routerLink="/main/crud/port">Mesas Electorales</a>
