--- a/src/app/dash-board/sidebar/sidebar.component.html
+++ b/src/app/dash-board/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
 
         <mat-nav-list>
           <a mat-list-item routerLink="/dash/abm/elecciones">Elecciones</a>
-          <a mat-list-item routerLink="/main/crud/launch">Compañeros</a>
+          <a mat-list-item routerLink="/dash/abm/companeros">Compañeros</a>
           <a mat-list-item routerLink="/main/crud/vessel">Escuelas</a>
           <a mat-list-item routerLink="/main/crud/port">Mesas Electorales</a>
           <a mat-list-item routerLink="/main/crud/agency">Fiscales de Mesas</a>
