--- a/src/app/dash-board/abm/companeros/modal-alta/modal-alta.component.html
+++ b/src/app/dash-board/abm/companeros/modal-alta/modal-alta.component.html
@@ -1,1 +1,28 @@
-<p>modal-alta works!</p>
+<mat-dialog-content>
+  <form [formGroup]="form" (ngSubmit)="saveCompanero()">
+    <mat-form-field appearance="fill" class="input-field">
+      <input matInput placeholder="Apellido" formControlName="apellido">
+      <mat-error *ngIf="form.controls['apellido'].hasError('required')">El apellido es requerido</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="input-field">
+      <input matInput placeholder="Nombres" formControlName="nombre">
+      <mat-error *ngIf="form.controls['nombre'].hasError('required')">Los nombres son requeridos</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="input-field">
+      <input matInput placeholder="DNI" formControlName="dni">
+      <mat-error *ngIf="form.controls['dni'].hasError('required')">El DNI es requerido</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="input-field">
+      <input matInput placeholder="Dirección" formControlName="direccion">
+      <mat-error *ngIf="form.controls['direccion'].hasError('required')">La dirección es requerida</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="input-field">
+      <input matInput placeholder="Teléfono" formControlName="tel">
+      <mat-error *ngIf="form.controls['tel'].hasError('required')">El teléfono es requerido</mat-error>
+    </mat-form-field>
+    <div class="button-container">
+      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Guardar</button>
+      <button mat-button (click)="closeModal($event)">Cerrar</button>
+    </div>
+  </form>
+</mat-dialog-content>
