--- a/src/app/dash-board/sidebar/sidebar.component.html
+++ b/src/app/dash-board/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
         <mat-nav-list>
           <a mat-list-item routerLink="/dash/abm/elecciones">Elecciones</a>
           <a mat-list-item routerLink="/dash/abm/companeros">Compañeros</a>
-          <a mat-list-item routerLink="/main/crud/vessel">Escuelas</a>
+          <a mat-list-item routerLink="/dash/abm/escuelas">Escuelas</a>
           <a mat-list-item routerLink="/main/crud/port">Mesas Electorales</a>
           <a mat-list-item routerLink="/main/crud/agency">Fiscales de Mesas</a>
           <a mat-list-item routerLink="/main/crud/agency">Fiscales Generales</a>
