--- a/src/app/dash-board/abm/escuelas/escuelas.component.html
+++ b/src/app/dash-board/abm/escuelas/escuelas.component.html
@@ -1,1 +1,41 @@
-<p>escuelas works!</p>
+<!-- <button mat-button (click)="abrirModalAgregar()">Agregar</button> -->
+<button mat-fab color="primary" class="floating-button" (click)="abrirModalAgregar()">
+  <mat-icon>add</mat-icon>
+</button>
+
+<table mat-table [dataSource]="escuelas" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="nombre">
+    <th mat-header-cell *matHeaderCellDef> Nombre de Escuela </th>
+    <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+  </ng-container>
+
+  <!-- date Column -->
+  <ng-container matColumnDef="direccion">
+    <th mat-header-cell *matHeaderCellDef> Direccion</th>
+    <td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
+  </ng-container>
+
+ <!-- Acciones Column -->
+ <ng-container matColumnDef="acciones">
+  <th mat-header-cell *matHeaderCellDef> Acciones </th>
+  <td mat-cell *matCellDef="let element">
+    <button mat-icon-button color="primary" (click)="abrirModalActualizar(element)">
+      <mat-icon>edit</mat-icon>
+    </button>
+    <button mat-icon-button color="warn" (click)="borrarEleccion(element)">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </td>
+</ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
