Preparacion Setup Elecciones

--- a/src/app/dash-board/abm/elecciones/elecciones.component.html
+++ b/src/app/dash-board/abm/elecciones/elecciones.component.html
@@ -32,6 +32,11 @@
     <button mat-icon-button color="warn" (click)="borrarEleccion(element)">
       <mat-icon>delete</mat-icon>
     </button>
+
+    <button mat-icon-button color="primary" (click)="redirigirSetupEleccion(element)">
+      <mat-icon>settings</mat-icon>
+    </button>
+
   </td>
 </ng-container>
 
