FiscalesDeMesa ABM terminado

--- a/src/app/setup-eleccion/sidebar-setup/sidebar-setup.component.html
+++ b/src/app/setup-eleccion/sidebar-setup/sidebar-setup.component.html
@@ -13,7 +13,7 @@
         <mat-nav-list>
 
           <a mat-list-item routerLink="/setup-elecccion/mesa-electoral">Configurar Mesas Electorales</a>
-          <a mat-list-item routerLink="/main/crud/agency">Configurar Fiscales de Mesas</a>
+          <a mat-list-item routerLink="/setup-elecccion/fiscales-mesas">Configurar Fiscales de Mesas</a>
           <a mat-list-item routerLink="/main/crud/agency">Configurar Fiscales Generales</a>
 
         </mat-nav-list>
