--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-
+<!--
+<button (click)="openSelectCompaneroModal()">
+  abrir modal
+</button>
+<h1>{{ title }}</h1> -->
 <router-outlet>
 
 </router-outlet>
