--- a/src/app/setup-eleccion/fiscales-mesas/fiscales-mesas.component.html
+++ b/src/app/setup-eleccion/fiscales-mesas/fiscales-mesas.component.html
@@ -1,1 +1,57 @@
-<p>fiscales-mesas works!</p>
+<!-- <button mat-button (click)="abrirModalAgregar()">Agregar</button> -->
+<button mat-fab color="primary" class="floating-button" (click)="abrirModalAgregar()">
+  <mat-icon>add</mat-icon>
+</button>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+
+
+  <!-- Escuela Column -->
+  <ng-container matColumnDef="escuela">
+    <th mat-header-cell *matHeaderCellDef>  Escuela </th>
+    <td mat-cell *matCellDef="let element"> {{element.MesaElectoral.Escuela.nombre}} </td>
+  </ng-container>
+
+  <!-- mesa Column -->
+  <ng-container matColumnDef="mesa">
+    <th mat-header-cell *matHeaderCellDef> Numero de Mesa  </th>
+    <td mat-cell *matCellDef="let element"> {{element.MesaElectoral.numeroMesa}} </td>
+  </ng-container>
+
+    <!-- eleccion Column -->
+    <ng-container matColumnDef="eleccion">
+      <th mat-header-cell *matHeaderCellDef> Eleccion </th>
+      <td mat-cell *matCellDef="let element"> {{element.MesaElectoral.Eleccion.nombre}} </td>
+    </ng-container>
+
+    <!-- apellido nombre Column -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Apellido y Nombre </th>
+      <td mat-cell *matCellDef="let element">{{element.Companero.apellido}}, {{element.Companero.nombre}} </td>
+    </ng-container>
+
+     <!-- Telefono Column -->
+     <ng-container matColumnDef="telefono">
+      <th mat-header-cell *matHeaderCellDef>Telefono </th>
+      <td mat-cell *matCellDef="let element"> {{element.Companero.tel}} </td>
+    </ng-container>
+
+ <!-- Acciones Column -->
+ <ng-container matColumnDef="acciones">
+  <th mat-header-cell *matHeaderCellDef> Acciones </th>
+  <td mat-cell *matCellDef="let element">
+    <button mat-icon-button color="warn" (click)="borrarFiscalMesa(element)">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </td>
+</ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator class="paginator-left" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
