Abm terminado modified:   src/app/dash-board/abm/abm-routing.module.ts modified:   src/app/dash-board/abm/abm.module.ts new file:   src/app/dash-board/abm/candidatos/candidatos-modal/candidatos-modal.component.css new file:   src/app/dash-board/abm/candidatos/candidatos-modal/candidatos-modal.component.html new file:   src/app/dash-board/abm/candidatos/candidatos-modal/candidatos-modal.component.ts new file:   src/app/dash-board/abm/candidatos/candidatos.component.css new file:   src/app/dash-board/abm/candidatos/candidatos.component.html new file:   src/app/dash-board/abm/candidatos/candidatos.component.spec.ts new file:   src/app/dash-board/abm/candidatos/candidatos.component.ts modified:   src/app/dash-board/sidebar/sidebar.component.html new file:   src/app/models/Candidato.ts

--- a/src/app/dash-board/sidebar/sidebar.component.html
+++ b/src/app/dash-board/sidebar/sidebar.component.html
@@ -28,9 +28,9 @@
             (click)="selectItem('mesas')"
             [ngClass]="{'active': selectedItem === 'mesas'}">Mesas Electorales</a>
           <a mat-list-item
-            routerLink="/main/crud/agency"
-            (click)="selectItem('fiscalesMesas')"
-            [ngClass]="{'active': selectedItem === 'fiscalesMesas'}">Fiscales de Mesas</a>
+            routerLink="/dash/abm/candidatos"
+            (click)="selectItem('candidatos')"
+            [ngClass]="{'active': selectedItem === 'candidatos'}">Candidatos</a>
           <a mat-list-item
             routerLink="/main/crud/agency"
             (click)="selectItem('fiscalesGenerales')"
