Abm Partidos finalizado

--- a/src/app/dash-board/sidebar/sidebar.component.html
+++ b/src/app/dash-board/sidebar/sidebar.component.html
@@ -32,9 +32,9 @@
             (click)="selectItem('candidatos')"
             [ngClass]="{'active': selectedItem === 'candidatos'}">Candidatos</a>
           <a mat-list-item
-            routerLink="/main/crud/agency"
-            (click)="selectItem('fiscalesGenerales')"
-            [ngClass]="{'active': selectedItem === 'fiscalesGenerales'}">Fiscales Generales</a>
+            routerLink="/dash/abm/partidos"
+            (click)="selectItem('partidos')"
+            [ngClass]="{'active': selectedItem === 'partidos'}">Partidos Políticos</a>
         </mat-nav-list>
 
       </mat-expansion-panel>
