--- a/src/app/dash-board/abm/candidatos/candidatos-modal/candidatos-modal.component.html
+++ b/src/app/dash-board/abm/candidatos/candidatos-modal/candidatos-modal.component.html
@@ -11,8 +11,8 @@
 
 
     <div class="button-container">
-      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Guardar</button>
-      <button mat-button (click)="closeModal($event)">Cerrar</button>
+      <button class="btn-guardar" mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Guardar</button>
+      <button class="btn-cerrar" mat-button (click)="closeModal($event)">Cerrar</button>
     </div>
   </form>
 </mat-dialog-content>
