Llevar cambios a la rama de pruebas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<!--
-<button (click)="openSelectCompaneroModal()">
-  abrir modal
-</button>
-<h1>{{ title }}</h1> -->
-<router-outlet>
+<div class="container">
+  <!-- Aquí puedes colocar tu encabezado o cualquier otro contenido que desees mostrar en todas las páginas -->
 
-</router-outlet>
+  <button class="microphone-button"
+  (mousedown)="startRecognition()"
+  (mouseup)="stopRecognition()"
+  [ngClass]="{'button-pressed': isButtonPressed}">
+  <i class="fa-solid fa-microphone fa-2xl" [ngClass]="{'fa-beat-fade button-pressed': isButtonPressed}"></i>
+</button>
+  <router-outlet></router-outlet>
+
+  <!-- Aquí puedes colocar tu pie de página o cualquier otro contenido que desees mostrar en todas las páginas -->
+</div>
+º
