--- a/src/app/dash-board/sidebar/sidebar.component.html
+++ b/src/app/dash-board/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-accordion>
-      <mat-expansion-panel class="mat-elevation-z0">
+      <mat-expansion-panel class="mat-elevation-z0" [expanded]="isABMExpanded">
         <mat-expansion-panel-header>
           <mat-panel-title>Seccion de ABMs</mat-panel-title>
         </mat-expansion-panel-header>
