--- a/src/app/setup-eleccion/fiscales-generales/fiscales-generales.component.html
+++ b/src/app/setup-eleccion/fiscales-generales/fiscales-generales.component.html
@@ -3,29 +3,18 @@
   <mat-icon>add</mat-icon>
 </button>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">x
 
   <!-- Escuela Column -->
   <ng-container matColumnDef="escuela">
     <th mat-header-cell *matHeaderCellDef>  Escuela </th>
-    <td mat-cell *matCellDef="let element"> {{element.MesaElectoral.Escuela.nombre}} </td>
-  </ng-container>
-
-  <!-- mesa Column -->
-  <ng-container matColumnDef="mesa">
-    <th mat-header-cell *matHeaderCellDef> Numero de Mesa  </th>
-    <td mat-cell *matCellDef="let element"> {{element.MesaElectoral.numeroMesa}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Escuela.nombre}} </td>
   </ng-container>
 
     <!-- eleccion Column -->
     <ng-container matColumnDef="eleccion">
       <th mat-header-cell *matHeaderCellDef> Eleccion </th>
-      <td mat-cell *matCellDef="let element"> {{element.MesaElectoral.Eleccion.nombre}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.Eleccion.nombre}} </td>
     </ng-container>
 
     <!-- apellido nombre Column -->
