--- a/src/app/dash-board/abm/elecciones/modal-alta/modal-alta.component.html
+++ b/src/app/dash-board/abm/elecciones/modal-alta/modal-alta.component.html
@@ -1,8 +1,3 @@
-<style>
-  .md-datepicker-calendar-pane {
-      z-index: 1200;
-  }
-</style>
 
 <mat-dialog-content>
   <form [formGroup]="form" (ngSubmit)="saveEleccion()">
@@ -11,9 +6,9 @@
       <mat-error *ngIf="form.controls['nombre'].hasError('required')">El nombre es requerido</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill" class="input-field">
-      <input (click)="openCalendar()" matInput [matDatepicker]="picker" placeholder="Fecha" formControlName="fecha">
+      <input  matInput [matDatepicker]="picker" placeholder="Fecha" formControlName="fecha">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker touchUi></mat-datepicker>
+      <mat-datepicker #picker ></mat-datepicker>
     </mat-form-field>
     <div class="button-container">
       <button mat-button type="submit" [disabled]="form.invalid">Guardar</button>
