Select de Candidatos

--- a/src/app/setup-eleccion/sidebar-setup/sidebar-setup.component.html
+++ b/src/app/setup-eleccion/sidebar-setup/sidebar-setup.component.html
@@ -15,6 +15,7 @@
           <a mat-list-item routerLink="/setup-elecccion/mesa-electoral">Configurar Mesas Electorales</a>
           <a mat-list-item routerLink="/setup-elecccion/fiscales-mesas">Configurar Fiscales de Mesas</a>
           <a mat-list-item routerLink="/setup-elecccion/fiscales-generales">Configurar Fiscales Generales</a>
+          <a mat-list-item routerLink="/setup-elecccion/listas">Configurar Listas Electorales</a>
 
         </mat-nav-list>
       </mat-expansion-panel>
