--- a/src/app/setup-eleccion/listas-electorales/listas-electorales.component.html
+++ b/src/app/setup-eleccion/listas-electorales/listas-electorales.component.html
@@ -1,1 +1,52 @@
-<p>listas-electorales works!</p>
+<!-- <button mat-button (click)="abrirModalAgregar()">Agregar</button> -->
+<button mat-fab color="primary" class="floating-button" (click)="abrirModal()">
+  <mat-icon>add</mat-icon>
+</button>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">x
+  <!-- ['numero', 'nombre', 'partido', 'cargo', 'candidato'] -->
+  <!-- Numero lista Column -->
+  <ng-container matColumnDef="numero">
+    <th mat-header-cell *matHeaderCellDef>Numero </th>
+    <td mat-cell *matCellDef="let element"> {{element.numero_lista}} </td>
+  </ng-container>
+
+    <!-- nombre lista Column -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+    </ng-container>
+
+    <!-- partido Column -->
+    <ng-container matColumnDef="partido">
+      <th mat-header-cell *matHeaderCellDef> Partido</th>
+      <td mat-cell *matCellDef="let element">{{element.Partido.nombre}} </td>
+    </ng-container>
+
+     <!-- cargo Column -->
+     <ng-container matColumnDef="cargo">
+      <th mat-header-cell *matHeaderCellDef>Cargo </th>
+      <td mat-cell *matCellDef="let element"> {{element.Cargo.nombre}} </td>
+    </ng-container>
+
+    <!-- candidato Column -->
+    <ng-container matColumnDef="candidato">
+      <th mat-header-cell *matHeaderCellDef>Candidato </th>
+      <td mat-cell *matCellDef="let element"> {{element.Candidato.nombre}} </td>
+    </ng-container>
+
+ <!-- Acciones Column -->
+ <ng-container matColumnDef="acciones">
+  <th mat-header-cell *matHeaderCellDef> Acciones </th>
+  <td mat-cell *matCellDef="let element">
+    <button mat-icon-button color="warn" (click)="borrarListaElectoral(element)">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </td>
+</ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator class="paginator-left" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
