--- a/src/app/setup-eleccion/listas-electorales/modal-listas/modal-listas.component.html
+++ b/src/app/setup-eleccion/listas-electorales/modal-listas/modal-listas.component.html
@@ -1,1 +1,63 @@
-<p>modal-listas works!</p>
+<mat-dialog-content class="form-container">
+  <h2>{{ isUpdate ? 'Actualizar Lista Electoral' : 'Agregar Lista Electoral' }}</h2>
+
+  <form [formGroup]="form" (ngSubmit)="setLista()">
+    <div class="form-row">
+      <div class="form-column">
+        <mat-form-field appearance="fill" class="select-field">
+          <mat-label>Seleccionar Partido</mat-label>
+          <mat-select formControlName="partido_id" [(ngModel)]="form.value.partido_id">
+            <mat-option *ngFor="let partido of partidos" [value]="partido.id">
+              {{ partido.nombre }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+    </div>
+
+    <div class="form-row">
+      <div class="form-column">
+        <mat-form-field appearance="fill" class="input-field">
+          <input matInput placeholder="Nro de lista" formControlName="numero_lista">
+          <mat-error *ngIf="form.controls['numero_lista'].hasError('required')">El nro de lista es requeridos</mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="form-column">
+        <mat-form-field appearance="fill" class="input-field">
+          <input matInput placeholder="Nombre de lista" formControlName="nombre">
+          <mat-error *ngIf="form.controls['nombre'].hasError('required')">El nombre de lista es requeridos</mat-error>
+        </mat-form-field>
+      </div>
+
+
+    </div>
+
+    <div class="form-row">
+      <div class="form-column">
+        <mat-form-field appearance="fill" class="select-field">
+          <mat-label>Seleccionar Cargo</mat-label>
+          <mat-select formControlName="cargo_id" [(ngModel)]="form.value.cargo_id">
+            <mat-option *ngFor="let cargo of cargos" [value]="cargo.id">
+              {{ cargo.nombre }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <mat-form-field appearance="fill" class="input-field">
+      <input matInput placeholder="Candidato" [readonly]="true" [value]="_candidatoSeleccionado?.nombre">
+      <button mat-icon-button matSuffix (click)="openSelectCandidatoModal($event)">
+        <mat-icon>search</mat-icon>
+      </button>
+      <mat-error *ngIf="form.controls['candidato_id'].hasError('required')">El candidato es requerido</mat-error>
+    </mat-form-field>
+
+    <div class="button-container">
+      <button mat-raised-button class="btn-guardar" type="submit" [disabled]="form.invalid">Guardar</button>
+      <button mat-button class="btn-cerrar" (click)="closeModal($event)">Cerrar</button>
+    </div>
+  </form>
+</mat-dialog-content>
