--- a/src/app/Escrutinio/carga-datos/carga-datos.component.css
+++ b/src/app/Escrutinio/carga-datos/carga-datos.component.css
@@ -23,3 +23,14 @@
   align-self: center;
   width: 100%;
 }
+
+.label-text {
+  font-size: 16px; /* Ajusta el tamaño de la letra según tus necesidades */
+}
+
+.form-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 10px;
+}
+
