--- a/src/app/Escrutinio/carga-datos/carga-datos.component.html
+++ b/src/app/Escrutinio/carga-datos/carga-datos.component.html
@@ -1,21 +1,48 @@
-<div class="header">
-  <h2>Escuela: {{mesa.Escuela.nombre}} Mesa Numero: {{ mesa.numeroMesa }}</h2>
+<div class="header" *ngIf="mesa">
+  <h2>Escuela: {{ mesa.Escuela.nombre }} Mesa Numero: {{ mesa.numeroMesa }}</h2>
   <mat-form-field>
     <mat-label>Cargos</mat-label>
     <mat-select (selectionChange)="onSelectChange($event)">
       <mat-option *ngFor="let cargo of cargos" [value]="cargo.id">{{ cargo.nombre }}</mat-option>
     </mat-select>
   </mat-form-field>
-
 </div>
 
-<div *ngIf="idCargoSelected > 0">
-  <div *ngFor="let lista of listasFiltradas" class="form-field">
-    <mat-form-field  class="form-field">
-      <mat-label>{{ lista.nombre }} - {{lista.Candidato.nombre}}  {{lista.Candidato.apellido}}</mat-label>
-      <input matInput type="number"  />
+<div *ngIf="resultadoMesa">
+
+  <div class="form-grid">
+    <mat-form-field class="form-field">
+      <mat-label class="label-text">Votos Afirmativos</mat-label>
+      <input matInput type="number" [(ngModel)]="resultadoMesa.votosAfirmativos" />
+    </mat-form-field>
+    <mat-form-field class="form-field">
+      <mat-label class="label-text">Votos Blancos</mat-label>
+      <input matInput type="number" [(ngModel)]="resultadoMesa.votosBlancos" />
+    </mat-form-field>
+    <mat-form-field class="form-field">
+      <mat-label class="label-text">Votos Nulos</mat-label>
+      <input matInput type="number" [(ngModel)]="resultadoMesa.votosNulos" />
+    </mat-form-field>
+    <mat-form-field class="form-field">
+      <mat-label class="label-text">Votos Recurridos</mat-label>
+      <input matInput type="number" [(ngModel)]="resultadoMesa.votosRecurridos" />
+    </mat-form-field>
+    <mat-form-field class="form-field">
+      <mat-label class="label-text">Votos Impugnados</mat-label>
+      <input matInput type="number" [(ngModel)]="resultadoMesa.votosImpuganados" />
     </mat-form-field>
   </div>
+
+
+
+
+  <div *ngFor="let item of resultadoMesa.DetalleResultado" class="form-field">
+    <mat-form-field class="form-field">
+      <mat-label class="label-text">{{ item.listaElectoral.nombre }} - {{ item.listaElectoral.Candidato.nombre }} {{ item.listaElectoral.Candidato.apellido }}</mat-label>
+      <input matInput type="number" [(ngModel)]="item.cantidadVotos" />
+    </mat-form-field>
+  </div>
+  <button mat-raised-button color="primary">Guardar</button>
 </div>
 
 
