--- a/src/app/Escrutinio/carga-datos/carga-datos.component.css
+++ b/src/app/Escrutinio/carga-datos/carga-datos.component.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #4e8cff; /* Color celeste de fondo */
+  background-color: #4379dd; /* Color celeste de fondo */
   padding: 10px;
 }
 
