--- a/src/app/Escrutinio/carga-datos/carga-datos.component.html
+++ b/src/app/Escrutinio/carga-datos/carga-datos.component.html
@@ -1,15 +1,14 @@
-<div class="header" *ngIf="mesa">
+<div class="header form-grid" *ngIf="mesa">
   <h2>Escuela: {{ mesa.Escuela.nombre }} Mesa Numero: {{ mesa.numeroMesa }}</h2>
-  <mat-form-field>
+  <mat-form-field >
     <mat-label>Cargos</mat-label>
     <mat-select (selectionChange)="onSelectChange($event)">
-      <mat-option *ngFor="let cargo of cargos" [value]="cargo.id">{{ cargo.nombre }}</mat-option>
+      <mat-option *ngFor="let cargo of cargos" [value]="cargo">{{ cargo.nombre }}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
 
 <div *ngIf="resultadoMesa">
-
   <div class="form-grid">
     <mat-form-field class="form-field">
       <mat-label class="label-text">Votos Afirmativos</mat-label>
@@ -17,32 +16,33 @@
     </mat-form-field>
     <mat-form-field class="form-field">
       <mat-label class="label-text">Votos Blancos</mat-label>
-      <input matInput type="number" [(ngModel)]="resultadoMesa.votosBlancos" />
+      <input (change)="actualizarValores()" matInput type="number" [(ngModel)]="resultadoMesa.votosBlancos" />
     </mat-form-field>
     <mat-form-field class="form-field">
       <mat-label class="label-text">Votos Nulos</mat-label>
-      <input matInput type="number" [(ngModel)]="resultadoMesa.votosNulos" />
+      <input (change)="actualizarValores()" matInput type="number" [(ngModel)]="resultadoMesa.votosNulos" />
     </mat-form-field>
     <mat-form-field class="form-field">
       <mat-label class="label-text">Votos Recurridos</mat-label>
-      <input matInput type="number" [(ngModel)]="resultadoMesa.votosRecurridos" />
+      <input (change)="actualizarValores()" matInput type="number" [(ngModel)]="resultadoMesa.votosRecurridos" />
     </mat-form-field>
     <mat-form-field class="form-field">
       <mat-label class="label-text">Votos Impugnados</mat-label>
-      <input matInput type="number" [(ngModel)]="resultadoMesa.votosImpuganados" />
+      <input (change)="actualizarValores()" matInput type="number" [(ngModel)]="resultadoMesa.votosImpuganados" />
+    </mat-form-field>
+    <mat-form-field class="form-field">
+      <mat-label class="label-text">Total</mat-label>
+      <input matInput type="number" [(ngModel)]="totalVotos" />
     </mat-form-field>
   </div>
-
-
-
 
   <div *ngFor="let item of resultadoMesa.DetalleResultado" class="form-field">
     <mat-form-field class="form-field">
-      <mat-label class="label-text">{{ item.listaElectoral.nombre }} - {{ item.listaElectoral.Candidato.nombre }} {{ item.listaElectoral.Candidato.apellido }}</mat-label>
-      <input matInput type="number" [(ngModel)]="item.cantidadVotos" />
+      <mat-label class="label-text">{{ item.ListaElectoral.nombre }} - {{ item.ListaElectoral.Candidato.nombre }} {{ item.ListaElectoral.Candidato.apellido }}</mat-label>
+      <input (change)="actualizarValores()" matInput type="number" [(ngModel)]="item.cantidadVotos" />
     </mat-form-field>
   </div>
-  <button mat-raised-button color="primary">Guardar</button>
+  <button (click)="guardar()" mat-raised-button color="primary">Guardar</button>
 </div>
 
 
