--- a/src/app/resultados/datos/datos.component.html
+++ b/src/app/resultados/datos/datos.component.html
@@ -3,6 +3,7 @@
   actualizar
 </button>
 
+<div id="chartContainer" style="height: 600px;"></div>
 
 <div  *ngFor="let item of votos">
   <p>{{item.name}} = {{item.value}}</p>
