--- a/src/app/resultados/datos/datos.component.html
+++ b/src/app/resultados/datos/datos.component.html
@@ -7,7 +7,7 @@
 
       </mat-panel-title>
       <mat-panel-description>
-        {{panelOpenState ? 'Ocultar' : 'Mostrar'}} las bancas obtenidas por sistema Dhont
+        {{panelOpenState ? 'Ocultar' : 'Mostrar'}} las bancas obtenidas por sistema Dhondt
         <mat-icon>account_circle</mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
